<resources>
        <string name="app_name">HOMMIE ENGLISH</string>
        <string name="action_settings">Settings</string>
        <!-- Strings used for fragments for navigation -->
        <string name="first_fragment_label">First Fragment</string>
        <string name="second_fragment_label">Second Fragment</string>
        <string name="next">Next</string>
        <string name="previous">Previous</string>

        <string name="hello_first_fragment">Hello first fragment</string>
        <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
        <!-- TODO: Remove or change this placeholder text -->
        <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="swipe_left_for_register">Swipe Left for Register</string>
        <string name="login">Login</string>
        <string name="continue_login">Sign In to Continue</string>
        <string name="password">Password</string>
        <string name="e_mail">Email</string>
        <string name="name">Name</string>
        <string name="tag">Already </string>
        <string name="swipe_right_for_login">Swipe Right for Login</string>
        <string name="register">Create New Account</string>
        <string name="sign_up">Sign Up</string>
        <string name="re_type_password">Re-type Password</string>
        <string name="your_name">Full Name</string>
</resources>