<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/main_background"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:id="@+id/titleLogin"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_subtitle"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/archivo_black_regular"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_subtitle_continue"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/archivo_black_regular"
            android:text="@string/login"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_subtitle_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/et_username"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/dmsans_regular"
            android:text="@string/continue_login"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/titleLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/name"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="15dp"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/roboto_regular"
            android:layout_above="@id/et_password"
            android:background="@drawable/et_custom"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/et_custom"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password"
            android:background="@drawable/btn_custom"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@android:color/white"
            android:text="@string/login"/>

        <TextView
            android:id="@+id/dont_have_account"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="12dp"
            android:clickable="true"
            android:text="Dont Have Account? Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
    </LinearLayout>

</LinearLayout>